tests/invalid/struct-misaligned.nyx
struct Bad:
    x: i32
   y: i32
